# Protokoly

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_foundation_tables.py  0002_add_import_sessions.py  0003_add_publication_runs.py
app/: main.py
app/cli/: cleanup_imports.py  generate_demo_docx.py  reset_demo.py  seed_demo.py
app/core/: config.py  security.py
app/db/: __init__.py  session.py
app/db/models/: __init__.py  domain.py
app/parsers/: docx.py  protocol.py
app/services/: demo_publication.py
app/services/ai/: provider.py
app/services/imports/: service.py
app/services/task_planning/: models.py  planner.py
app/web/templates/: base.html  demo.html  demo_complete.html  demo_dashboard.html  demo_guided.html  home.html  projects.html  (+11 more)
deploy/nginx/: README.md  nginx.conf
docs/: ai-extension.md  architecture.md  bitrix-integration.md  demo-mvp.md  demo-script.md  deployment-demo.md  development-roadmap.md  docx-import-mvp.md  domain-model.md  server-runbook.md  ui-checklist.md
prototype/: index.html
scripts/: backup.sh  check.sh  common-demo.sh  deploy.sh  restore.sh  seed-demo.sh  smoke-test.sh  update.sh
tests/: conftest.py  test_ai_provider.py  test_business_demo_polish.py  test_config.py  test_demo_mvp.py  test_deployment_security.py  test_docx_import_mvp.py  test_memo_parser.py  test_parsers.py  test_task_planning.py  test_ux_dashboard.py
tests/fixtures/: memo_m026_26.txt
(+4 files in other folders)
